--- a/src/documents/post/2007-02-20-ll-ls-la.html.markdown
+++ b/src/documents/post/2007-02-20-ll-ls-la.html.markdown
@@ -6,6 +6,7 @@ author: Olivier
 aliases: ['/post/2007/02/20/ll-ls-la/', '/post/2007/02/20/ll-ls-la/']
 categories: [Uncategorized]
 tags: [Ubuntu,shell]
+ignored: true
 ---
 
 <p>Comment faire un alias ll ? En faisant un vi ~/.bashrc</p> 
